--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@ wheels/
 .installed.cfg
 *.egg
 MANIFEST
+.DS_Store
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -114,3 +115,4 @@ assets/fonts/BurbankBigCondensed-Black.otf
 itemshop.png
 
 # Credentials
+configuration.json
