--- a/configuration_example.json
+++ b/configuration_example.json
@@ -5,5 +5,15 @@
         "enabled": false,
         "TOKEN": "DISCORD_BOT_TOKEN",
         "CHANNEL_ID": 1234567890
+    },
+    "reddit": {
+        "enabled": false,
+        "client_id": "DISCORD_BOT_TOKEN",
+        "client_secret": "1234567890",
+        "user_agent": "agent",
+        "username": "username",
+        "password": "password",
+        "sub_reddit": "sub_reddit",
+        "flair_id": "flair_id"
     }
 }
